--- a/doc/pq-basics.ipynb
+++ b/doc/pq-basics.ipynb
@@ -1,7 +1,16 @@
 {
  "metadata": {
+  "kernelspec": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "display_name": "IPython (Python 3)",
+   "language": "python",
+   "name": "python3"
+  },
   "name": "",
-  "signature": "sha256:2863502e968c2a598804aab0b85254cf722177d016dc289a47eafc9eddfa5e8b"
+  "signature": "sha256:6a9b84ca9f0f45d7a2e2a9f84aa5d35ce0205aa3af03cb86f55ed22369abe271"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -10,7 +19,9 @@
    "cells": [
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "Back to [Index](Index.ipynb)"
      ]
@@ -33,7 +44,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "The PhysicalQuantities module can be installed like any other Python module:\n",
       " 1. Download package from https://github.com/ipython-contrib/IPython-notebook-extensions/archive/master.zip\n",
@@ -43,7 +56,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "This document describes the basic use and some internals of the Python module.\n",
       "If you are using IPython or the IPython notebook, you might want to read the other example notebooks first."
@@ -66,11 +81,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 35
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "You can now define physical quantities using the `PhysicalQuantity(value, unit)` constructor:"
      ]
@@ -84,11 +101,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 36
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "or as the shortcut `Q()`:"
      ]
@@ -102,11 +121,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 37
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "This creates a new `PhysicalQuantity` object:"
      ]
@@ -130,11 +151,13 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 38
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "The value and unit are stored as attributes of the class:"
      ]
@@ -162,11 +185,13 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 39
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "Using `.to()` let's you convert to other representations of the unit. This can be used for scaling or to express the quantity in a derived unit. The `.base` property will convert "
      ]
@@ -201,11 +226,13 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 40
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "Scaling of simple units is easy using scaling attributes:"
      ]
@@ -215,10 +242,9 @@
      "collapsed": false,
      "input": [
       "print(g.nm)\n",
-      "print(g.mum)\n",
+      "print(g.um)\n",
       "print(g.mm)\n",
       "print(g.cm)\n",
-      "print(g.dm)\n",
       "print(g.m)\n",
       "print(g.km)"
      ],
@@ -230,20 +256,21 @@
        "stream": "stdout",
        "text": [
         "1100000000.0 nm\n",
-        "1100000.0 \u00b5m\n",
+        "1100000.0 um\n",
         "1100.0 mm\n",
         "110.00000000000001 cm\n",
-        "11.0 dm\n",
         "1.1 m\n",
         "0.0011 km\n"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 41
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "The physical quantity can converted back to a unitless value using the underscore `_` with the scaling attribute:"
      ]
@@ -253,10 +280,9 @@
      "collapsed": false,
      "input": [
       "print(g.nm_)\n",
-      "print(g.mum_)\n",
+      "print(g.um_)\n",
       "print(g.mm_)\n",
       "print(g.cm_)\n",
-      "print(g.dm_)\n",
       "print(g.m_)\n",
       "print(g.km_)"
      ],
@@ -271,13 +297,12 @@
         "1100000.0\n",
         "1100.0\n",
         "110.00000000000001\n",
-        "11.0\n",
         "1.1\n",
         "0.0011\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 42
     },
     {
      "cell_type": "heading",
@@ -289,7 +314,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "Internally, a physical quantity is represented using two classes:\n",
       " * `PhysicalQuantity` holding the value and the unit\n",
@@ -309,17 +336,19 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 28,
+       "prompt_number": 43,
        "text": [
         "[1, 2, 3]"
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 43
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "The `value` attribute is basically only a container, allowing different types of values. Tested types are:\n",
       " * integers\n",
@@ -341,17 +370,17 @@
      "outputs": [
       {
        "latex": [
-        "$m^2 \\cdot s^3/kg/A^2$ "
+        "$m^2 \\cdot s^3/kg/A^2$"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 44,
        "text": [
         "<PhysicalUnit m**2*s**3/kg/A**2>"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 44
     },
     {
      "cell_type": "code",
@@ -369,17 +398,19 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 45,
        "text": [
         "PhysicalQuantities.Unit.PhysicalUnit"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 45
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "The unit is stored in a `PhysicalUnit` class. This class has a number of attributes:\n",
       " * `factor` - scaling factor from base units\n",
@@ -399,13 +430,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 26,
+       "prompt_number": 46,
        "text": [
         "(0.001, True)"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 46
     },
     {
      "cell_type": "code",
@@ -432,7 +463,7 @@
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
@@ -444,7 +475,8 @@
        "breakpoint": false
       }
      },
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 47
     }
    ],
    "metadata": {}
