--- a/doc/pq-dbquantity.ipynb
+++ b/doc/pq-dbquantity.ipynb
@@ -1,7 +1,16 @@
 {
  "metadata": {
+  "kernelspec": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "display_name": "IPython (Python 3)",
+   "language": "python",
+   "name": "python3"
+  },
   "name": "",
-  "signature": "sha256:d9f6b2a753400872084661237007f3096061afe6b524e42c124c3c4b74aac93f"
+  "signature": "sha256:30134c962d3bdb4fd378d8e022056f668f1452b3913a2065f438c11c7892509a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -10,7 +19,9 @@
    "cells": [
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "Back to [Index](index.ipynb)"
      ]
@@ -18,44 +29,44 @@
     {
      "cell_type": "heading",
      "level": 1,
-     "metadata": {
-      "heading_collapsed": false
-     },
+     "metadata": {},
      "source": [
       "PhysicalQuantities - dBUnits"
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
-      "The IPython extension for dB units is loaded using\n",
-      "`%load_ext PhysicalQuantities.dBUnit_ipython`"
+      "The IPython extension for dB units is loaded using:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%reload_ext PhysicalQuantities.dBUnit_ipython"
+      "%reload_ext PhysicalQuantities.dBQuantity_ipython"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 63
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
-      "The extension provides convenient of working with dB values:"
+      "It provides an easy way to do dB calculations:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%precision 2\n",
       "p = 0 dBm\n",
       "print(p)\n",
       "print(p.dBW)\n",
@@ -74,14 +85,7 @@
        ]
       }
      ],
-     "prompt_number": 62
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "In addition to dB scaled physical units, relative dB values can be used:"
-     ]
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -101,14 +105,7 @@
        ]
       }
      ],
-     "prompt_number": 64
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Conversion between units is easy using dynamic attributes:"
-     ]
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -129,60 +126,24 @@
        ]
       }
      ],
-     "prompt_number": 65
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "The list of available dB scaled units is shown below:"
-     ]
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import PhysicalQuantities.dBUnit as dbu\n",
-      "dbu.dB_units"
+      "from PhysicalQuantities.dBQuantity import dBQuantity"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 82,
-       "text": [
-        "{'dB': ('', 0, 1),\n",
-        " 'dBA': ('A', 0, 20),\n",
-        " 'dBV': ('V', 0, 20),\n",
-        " 'dBW': ('W', 0, 10),\n",
-        " 'dBd': ('', 2.15, 10),\n",
-        " 'dBi': ('', 0, 10),\n",
-        " 'dBm': ('W', -30, 10),\n",
-        " 'dBmA': ('A', -30, 20),\n",
-        " 'dBmV': ('V', -30, 20),\n",
-        " 'dBnA': ('A', -90, 20),\n",
-        " 'dBnV': ('V', -90, 20),\n",
-        " 'dBuA': ('A', -60, 20),\n",
-        " 'dBuV': ('V', -60, 20)}"
-       ]
-      }
-     ],
-     "prompt_number": 82
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Manual generation looks like this:"
-     ]
+     "outputs": [],
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "a = dBUnit(33.,'dBm', islog=True)\n",
+      "a = dBQuantity(0.1,'dBm', islog=True)\n",
       "print(a)"
      ],
      "language": "python",
@@ -192,11 +153,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "33.00 dBm\n"
+        "0.1 dBm\n"
        ]
       }
      ],
-     "prompt_number": 67
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -210,13 +171,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 68,
+       "prompt_number": 11,
        "text": [
-        "(33.00, 'dBm')"
+        "(0.1, 'dBm')"
        ]
       }
      ],
-     "prompt_number": 68
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -229,52 +190,46 @@
      "outputs": [
       {
        "latex": [
-        "2.00 $W$"
+        "0.0010232929922807546 $W$"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 69,
+       "prompt_number": 12,
        "text": [
-        "1.99526231497 W"
+        "0.0010232929922807546 W"
        ]
       }
      ],
-     "prompt_number": 69
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
-      "You can work with dB-values by adding or subtracting other dB values or multiplying/dividing by a int or float number:"
+      "Helper function to generate dB values from a linear value:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "a = 6 dB\n",
-      "print a + 1.1 dB\n",
-      "print a - 1.1 dB\n",
-      "print a/2\n",
-      "print a\n",
-      "print a*2"
+      "pq.dBQuantity.dB(100)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 29,
        "text": [
-        "7.10 dB\n",
-        "4.90 dB\n",
-        "3 dB\n",
-        "6 dB\n",
-        "12 dB\n"
+        "20.0 dB"
        ]
       }
      ],
-     "prompt_number": 75
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -282,8 +237,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 71
+     "outputs": []
     }
    ],
    "metadata": {}
