--- a/doc/pq-formatting.ipynb
+++ b/doc/pq-formatting.ipynb
@@ -1,7 +1,16 @@
 {
  "metadata": {
+  "kernelspec": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "display_name": "IPython (Python 3)",
+   "language": "python",
+   "name": "python3"
+  },
   "name": "",
-  "signature": "sha256:d7c331a06d3130318a5478884ebd2fd330e211e376e4b5f4331627decdb8ee2c"
+  "signature": "sha256:f565ac8279bc62ba1c1f54bebf723943eb091b5751fc532a1ab5684e55c57dcf"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,7 +27,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "Sometimes numerical calculation results don't look too pretty:"
      ]
@@ -41,7 +52,7 @@
        "output_type": "pyout",
        "prompt_number": 1,
        "text": [
-        "2.33333333333 1/m"
+        "2.3333333333333335 1/m"
        ]
       }
      ],
@@ -57,7 +68,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "Using the IPython `%precision` magic, the displayed result can be made prettier:"
      ]
@@ -80,7 +93,7 @@
        "output_type": "pyout",
        "prompt_number": 2,
        "text": [
-        "2.33333333333 1/m"
+        "2.3 1/m"
        ]
       }
      ],
@@ -88,7 +101,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "The magic also works for Numpy arrays:"
      ]
@@ -120,7 +135,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "The documentation for the `%precision` magic can be found here: [link](http://ipython.org/ipython-doc/dev/api/generated/IPython.core.magics.basic.html#IPython.core.magics.basic.BasicMagics.precision)"
      ]
@@ -135,7 +152,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "The `%precision` magic can be overridden individually for float quantities, using the `.format` property of the `PhysicalQuantity` class.\n",
       "**Attention** The `format` property is taking Python `formatter` arguments."
@@ -223,9 +242,9 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1.23456 mm\n",
         "1.2 mm\n",
-        "1.23456 mm\n",
+        "1.2 mm\n",
+        "1.2 mm\n",
         "0.001235\n",
         "1.23\n"
        ]
@@ -235,7 +254,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "Another way to display quantities is using the `Latex` function. Unfortunately, mixing math equations and Python's `.format()` needs a little trick because of the `{}`brackets."
      ]
@@ -261,7 +282,7 @@
      "outputs": [
       {
        "latex": [
-        "$v_{min}$ is 1.234567 m"
+        "$v_{min}$ is 1.2 m"
        ],
        "metadata": {},
        "output_type": "display_data",
