--- a/doc/pq-sympy.ipynb
+++ b/doc/pq-sympy.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:18f013d04834108d3441fbde6bdb41bc6a157d894f41e40589a9428cd375bc40"
+  "signature": "sha256:940880bf84b07a272e5c613865e39237545824e08e901758be288dc7ce0fbadb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,23 +22,15 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Working with Uncertainties"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "variables": {}
-     },
-     "source": [
-      "This is still work in progress."
+      "Sympy and PhysicalQuantities"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from uncertainties import ufloat"
+      "from sympy import *\n",
+      "init_printing()"
      ],
      "language": "python",
      "metadata": {},
@@ -49,45 +41,32 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "x = ufloat(2, 0.25) * 1 m\n",
-      "x"
+      "a = 1 m * Matrix([ [1,2,3], [4,5,6]])\n",
+      "b = 1 cm * Matrix([ [1,2,3], [4,5,6]])"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "latex": [
-        "2.00+/-0.25 $m$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 2,
-       "text": [
-        "2.00+/-0.25 m"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "square = x**2  # Transparent calculations\n",
-      "square"
+      "a"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "latex": [
-        "4.0+/-1.0 $m^2$"
+        "$\\left[\\begin{matrix}1 & 2 & 3\\\\4 & 5 & 6\\end{matrix}\\right]$ $m$"
        ],
        "metadata": {},
        "output_type": "pyout",
        "prompt_number": 3,
        "text": [
-        "4.0+/-1.0 m^2"
+        "Matrix([[1, 2, 3], [4, 5, 6]]) m"
        ]
       }
      ],
@@ -97,20 +76,20 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "square - x*x"
+      "a+b"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "latex": [
-        "0.0+/-0 $m^2$"
+        "$\\left[\\begin{matrix}1.01 & 2.02 & 3.03\\\\4.04 & 5.05 & 6.06\\end{matrix}\\right]$ $m$"
        ],
        "metadata": {},
        "output_type": "pyout",
        "prompt_number": 4,
        "text": [
-        "0.0+/-0 m^2"
+        "Matrix([[1.01000000000000, 2.02000000000000, 3.03000000000000], [4.04000000000000, 5.05000000000000, 6.06000000000000]]) m"
        ]
       }
      ],
@@ -120,69 +99,82 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from uncertainties.umath import *  # sin(), etc.\n",
-      "x = ufloat(2, 0.25) * 35 deg\n",
-      "#x = 35 deg\n",
-      "#sin(x)\n",
-      "#x"
+      "x = Symbol('x')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "1 m * x"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "latex": [
+        "$x$ $m$"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "x m"
+       ]
+      }
+     ],
      "prompt_number": 6
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "x = ufloat(2, 0.25) * 1 m\n",
-      "#d = (2*x).derivatives[x]  # Automatic calculation of derivatives\n",
-      "#print(d)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 24
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from uncertainties import unumpy  # Array manipulation\n",
-      "random_vars = unumpy.uarray([1, 2], [0.1, 0.2]) * 1 s\n",
-      "print(random_vars)"
+      "a = 2 m * x\n",
+      "a"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "latex": [
+        "$2 x$ $m$"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
        "text": [
-        "[1.0+/-0.1 2.0+/-0.2] s\n"
+        "2*x m"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(random_vars.s_.mean())"
+      "a/3"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "latex": [
+        "$\\frac{2 x}{3}$ $m$"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
        "text": [
-        "1.50+/-0.11\n"
+        "2*x/3 m"
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -190,7 +182,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 8
     }
    ],
    "metadata": {}
