--- a/doc/Index.ipynb
+++ b/doc/Index.ipynb
@@ -1,7 +1,16 @@
 {
  "metadata": {
+  "kernelspec": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "display_name": "IPython (Python 3)",
+   "language": "python",
+   "name": "python3"
+  },
   "name": "",
-  "signature": "sha256:a263a9281d35304f9bfa106f44abab0db4fec3d51168adbec91876fb803c648b"
+  "signature": "sha256:4e42a13d33ae49e4d1b53a3b08cee84e8219c693f9de6b85ed4fda2bc6a661ad"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,7 +27,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "PhysicalQuantities is a python module that allows calculations to be aware of physical units. Built-in unit conversion ensures that calculations will result in the correct unit.\n",
       "\n",
@@ -47,11 +58,13 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "The Github repository for this module can be found here: https://github.com/juhasch/PhysicalQuantities\n",
       "\n",
@@ -69,14 +82,19 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "* [Basics and Installation](pq-basics.ipynb)\n",
       "* [Using Physical Quantities in IPython](pq-ipython.ipynb)\n",
       "* [Output Formatting](pq-formatting.ipynb)\n",
-      "* [Doing dB Calculations](pq-dbunits.ipynb)\n",
+      "* [Doing dB Calculations](pq-dbquantity.ipynb)\n",
       "* [Using Numpy Arrays](pq-numpy.ipynb)\n",
-      "* [Practical Example - Calculate a RC Circuit](pq-example.ipynb)"
+      "* [Autoscaling](pq-autoscale.ipynb)\n",
+      "* [SymPy](pq-sympy.ipynb)\n",
+      "* [Uncertainties](pq-uncertainties.ipynb)\n",
+      "* [Practical Example - Calculate a RC Circuit](pq-example.ipynb)\n"
      ]
     },
     {
@@ -89,7 +107,8 @@
        "breakpoint": false
       }
      },
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 1
     }
    ],
    "metadata": {}
