--- a/doc/pq-ipython.ipynb
+++ b/doc/pq-ipython.ipynb
@@ -1,7 +1,16 @@
 {
  "metadata": {
+  "kernelspec": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "display_name": "IPython (Python 3)",
+   "language": "python",
+   "name": "python3"
+  },
   "name": "",
-  "signature": "sha256:12ec1089fba5c763ef2dcbb39ae2a8705844b6bd743de02a779e6517894ad928"
+  "signature": "sha256:38d78fa126033719303878b0777c299bb75936d23f72d170f4bde3ee83712fa2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -10,7 +19,9 @@
    "cells": [
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "Back to [Index](Index.ipynb)"
      ]
@@ -25,7 +36,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "The IPython extension makes using physical quantities easier. To load the extension use:"
      ]
@@ -53,11 +66,13 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "Now entering a physical quantities gets very easy:"
      ]
@@ -73,7 +88,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -90,48 +105,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "d = 12.166999999999996 s^3\n",
+        "d = 2.3 s^3\n",
         "t = 3 A\n",
-        "v = 9328.033333333331 s^3/A\n"
+        "v = 1763.3333333333333 s^3/A\n"
        ]
       }
      ],
-     "prompt_number": 15
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "**BUG:**\n",
-      "Be careful when specifiying values, like this:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "b = 2 m**2\n",
-      "print (\"b = %s\" %b)\n",
-      "b = 2* (1m)**2\n",
-      "print (\"b = %s\" %b)"
-     ],
-     "language": "python",
-     "metadata": {
-      "run_control": {
-       "breakpoint": false
-      }
-     },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "b = 4 m^2\n",
-        "b = 2 m^2\n"
-       ]
-      }
-     ],
-     "prompt_number": 16
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -143,7 +123,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "The easiest way to scale a  unit is to use prefix attributes:"
      ]
@@ -174,11 +156,13 @@
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "To convert between different representations of a unit, `to()` can be used:"
      ]
@@ -202,12 +186,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1 m*N\n",
+        "1 N*m\n",
         "1.0 J\n"
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 6
     },
     {
      "cell_type": "heading",
@@ -219,7 +203,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "The `PhysicalQuantity` class tries to be a wrapper around the value of a given quantity, i.e. not only single numbers can be used. For examples using Numpy arrays, take a look at the [Using Numpy Arrays](pq-numpy.ipynb) notebook. "
      ]
@@ -249,11 +235,13 @@
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "There is limited support for the `uncertainties` module. This should improve in the future."
      ]
@@ -271,7 +259,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -285,17 +273,17 @@
      "outputs": [
       {
        "latex": [
-        "2.0+/-0.25 $m$"
+        "2.00+/-0.25 $m$"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 24,
+       "prompt_number": 9,
        "text": [
-        "2.0+/-0.25 m"
+        "2.00+/-0.25 m"
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -313,13 +301,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 25,
+       "prompt_number": 10,
        "text": [
         "4.0+/-1.0 m^2"
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -336,13 +324,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 26,
+       "prompt_number": 11,
        "text": [
         "0.0+/-0 m^2"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -354,7 +342,9 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "variables": {}
+     },
      "source": [
       "All predefined units can be listed using the `list()` or `html_list()` function of a unit:\n",
       "\n",
@@ -373,17 +363,17 @@
      "outputs": [
       {
        "html": [
-        "<table><tr><th>Name</th><th>Base Unit</th><th>Quantity</th></tr><tr><td>arcsec</td><td>$  \\pi  \\cdot rad/180/3600 $</td><td><a href=\"\" target=\"_blank\">seconds of arc</a></td></tr><tr><td>K</td><td>$ K $</td><td><a href=\"\" target=\"_blank\"></a></td></tr><tr><td>F</td><td>$ C/V $</td><td><a href=\"https://en.wikipedia.org/wiki/Farad\" target=\"_blank\">Farad</a></td></tr><tr><td>V</td><td>$ W/A $</td><td><a href=\"https://en.wikipedia.org/wiki/Volt\" target=\"_blank\">Volt</a></td></tr><tr><td>deg</td><td>$  \\pi  \\cdot rad/180 $</td><td><a href=\"http://en.wikipedia.org/wiki/Degree_%28angle%29\" target=\"_blank\">Degree</a></td></tr><tr><td>A</td><td>$ A $</td><td><a href=\"\" target=\"_blank\"></a></td></tr><tr><td>sr</td><td>$ sr $</td><td><a href=\"\" target=\"_blank\"></a></td></tr><tr><td>lm</td><td>$ cd \\cdot sr $</td><td><a href=\"https://en.wikipedia.org/wiki/Lumen_(unit)\" target=\"_blank\">Lumen</a></td></tr><tr><td>W</td><td>$ J/s $</td><td><a href=\"https://en.wikipedia.org/wiki/Watt\" target=\"_blank\">Watt</a></td></tr><tr><td>g</td><td>$ g $</td><td><a href=\"\" target=\"_blank\"></a></td></tr><tr><td>rad</td><td>$ rad $</td><td><a href=\"\" target=\"_blank\"></a></td></tr><tr><td>min</td><td>$ 60 \\cdot s $</td><td><a href=\"https://en.wikipedia.org/wiki/Hour\" target=\"_blank\">Minute</a></td></tr><tr><td>kg</td><td>$ kg $</td><td><a href=\"\" target=\"_blank\"></a></td></tr><tr><td>m</td><td>$ m $</td><td><a href=\"\" target=\"_blank\"></a></td></tr><tr><td>Wb</td><td>$ V \\cdot s $</td><td><a href=\"https://en.wikipedia.org/wiki/Weber_(unit)\" target=\"_blank\">Weber</a></td></tr><tr><td>H</td><td>$ Wb/A $</td><td><a href=\"https://en.wikipedia.org/wiki/Henry_(unit)\" target=\"_blank\">Henry</a></td></tr><tr><td>h</td><td>$ 60 \\cdot 60 \\cdot s $</td><td><a href=\"https://en.wikipedia.org/wiki/Hour\" target=\"_blank\">Hour</a></td></tr><tr><td>Pa</td><td>$ N/m^2 $</td><td><a href=\"https://en.wikipedia.org/wiki/Pascal_(unit)\" target=\"_blank\">Pascal</a></td></tr><tr><td>C</td><td>$ s \\cdot A $</td><td><a href=\"https://en.wikipedia.org/wiki/Coulomb\" target=\"_blank\">Coulomb</a></td></tr><tr><td>S</td><td>$ A/V $</td><td><a href=\"https://en.wikipedia.org/wiki/Siemens_(unit)\" target=\"_blank\">Siemens</a></td></tr><tr><td>s</td><td>$ s $</td><td><a href=\"\" target=\"_blank\"></a></td></tr><tr><td>cd</td><td>$ cd $</td><td><a href=\"\" target=\"_blank\"></a></td></tr><tr><td>N</td><td>$ m \\cdot kg/s^2 $</td><td><a href=\"https://en.wikipedia.org/wiki/Newton_(unit)\" target=\"_blank\">Newton</a></td></tr><tr><td>lx</td><td>$ lm/m^2 $</td><td><a href=\"https://en.wikipedia.org/wiki/Lux\" target=\"_blank\">Lux</a></td></tr><tr><td>T</td><td>$ Wb/m^2 $</td><td><a href=\"https://en.wikipedia.org/wiki/Tesla_(unit)\" target=\"_blank\">Tesla</a></td></tr><tr><td>mol</td><td>$ mol $</td><td><a href=\"\" target=\"_blank\"></a></td></tr><tr><td>Ohm</td><td>$ V/A $</td><td><a href=\"https://en.wikipedia.org/wiki/Ohm_(unit)\" target=\"_blank\">Ohm</a></td></tr><tr><td>Hz</td><td>$ 1/s $</td><td><a href=\"https://en.wikipedia.org/wiki/Hertz\" target=\"_blank\">Hertz</a></td></tr><tr><td>J</td><td>$ N \\cdot m $</td><td><a href=\"https://en.wikipedia.org/wiki/Joule\" target=\"_blank\">Joule</a></td></tr><tr><td>arcmin</td><td>$  \\pi  \\cdot rad/180/60 $</td><td><a href=\"\" target=\"_blank\">minutes of arc</a></td></tr></table>"
+        "<table><tr><th>Name</th><th>Base Unit</th><th>Quantity</th></tr><tr><td>kg</td><td>$ kg $</td><td><a href=\"https://en.wikipedia.org/wiki/Kilogram\" target=\"_blank\">Kilogram</a></td></tr><tr><td>cd</td><td>$ cd $</td><td><a href=\"https://en.wikipedia.org/wiki/Candela\" target=\"_blank\">Candela</a></td></tr><tr><td>A</td><td>$ A $</td><td><a href=\"https://en.wikipedia.org/wiki/Ampere\" target=\"_blank\">Ampere</a></td></tr><tr><td>Hz</td><td>$ 1/s $</td><td><a href=\"https://en.wikipedia.org/wiki/Hertz\" target=\"_blank\">Hertz</a></td></tr><tr><td>sr</td><td>$ sr $</td><td><a href=\"https://en.wikipedia.org/wiki/Steradian\" target=\"_blank\">Streradian</a></td></tr><tr><td>lx</td><td>$ lm/m^2 $</td><td><a href=\"https://en.wikipedia.org/wiki/Lux\" target=\"_blank\">Lux</a></td></tr><tr><td>arcmin</td><td>$  \\pi  \\cdot rad/180/60 $</td><td><a href=\"\" target=\"_blank\">minutes of arc</a></td></tr><tr><td>T</td><td>$ Wb/m^2 $</td><td><a href=\"https://en.wikipedia.org/wiki/Tesla_(unit)\" target=\"_blank\">Tesla</a></td></tr><tr><td>Wb</td><td>$ V \\cdot s $</td><td><a href=\"https://en.wikipedia.org/wiki/Weber_(unit)\" target=\"_blank\">Weber</a></td></tr><tr><td>Ohm</td><td>$ V/A $</td><td><a href=\"https://en.wikipedia.org/wiki/Ohm_(unit)\" target=\"_blank\">Ohm</a></td></tr><tr><td>H</td><td>$ Wb/A $</td><td><a href=\"https://en.wikipedia.org/wiki/Henry_(unit)\" target=\"_blank\">Henry</a></td></tr><tr><td>K</td><td>$ K $</td><td><a href=\"https://en.wikipedia.org/wiki/Kelvin\" target=\"_blank\">Kelvin</a></td></tr><tr><td>h</td><td>$ 60 \\cdot 60 \\cdot s $</td><td><a href=\"https://en.wikipedia.org/wiki/Hour\" target=\"_blank\">Hour</a></td></tr><tr><td>min</td><td>$ 60 \\cdot s $</td><td><a href=\"https://en.wikipedia.org/wiki/Hour\" target=\"_blank\">Minute</a></td></tr><tr><td>W</td><td>$ J/s $</td><td><a href=\"https://en.wikipedia.org/wiki/Watt\" target=\"_blank\">Watt</a></td></tr><tr><td>C</td><td>$ s \\cdot A $</td><td><a href=\"https://en.wikipedia.org/wiki/Coulomb\" target=\"_blank\">Coulomb</a></td></tr><tr><td>deg</td><td>$  \\pi  \\cdot rad/180 $</td><td><a href=\"http://en.wikipedia.org/wiki/Degree_%28angle%29\" target=\"_blank\">Degree</a></td></tr><tr><td>s</td><td>$ s $</td><td><a href=\"https://en.wikipedia.org/wiki/Second\" target=\"_blank\">Second</a></td></tr><tr><td>g</td><td>$ g $</td><td><a href=\"https://en.wikipedia.org/wiki/Kilogram\" target=\"_blank\">Kilogram</a></td></tr><tr><td>rad</td><td>$ rad $</td><td><a href=\"https://en.wikipedia.org/wiki/Radian\" target=\"_blank\">Radian</a></td></tr><tr><td>mol</td><td>$ mol $</td><td><a href=\"https://en.wikipedia.org/wiki/Mole_(unit)\" target=\"_blank\">Mol</a></td></tr><tr><td>F</td><td>$ C/V $</td><td><a href=\"https://en.wikipedia.org/wiki/Farad\" target=\"_blank\">Farad</a></td></tr><tr><td>m</td><td>$ m $</td><td><a href=\"https://en.wikipedia.org/wiki/Metre\" target=\"_blank\">Metre</a></td></tr><tr><td>lm</td><td>$ cd \\cdot sr $</td><td><a href=\"https://en.wikipedia.org/wiki/Lumen_(unit)\" target=\"_blank\">Lumen</a></td></tr><tr><td>V</td><td>$ W/A $</td><td><a href=\"https://en.wikipedia.org/wiki/Volt\" target=\"_blank\">Volt</a></td></tr><tr><td>arcsec</td><td>$  \\pi  \\cdot rad/180/3600 $</td><td><a href=\"\" target=\"_blank\">seconds of arc</a></td></tr><tr><td>N</td><td>$ m \\cdot kg/s^2 $</td><td><a href=\"https://en.wikipedia.org/wiki/Newton_(unit)\" target=\"_blank\">Newton</a></td></tr><tr><td>J</td><td>$ N \\cdot m $</td><td><a href=\"https://en.wikipedia.org/wiki/Joule\" target=\"_blank\">Joule</a></td></tr><tr><td>Pa</td><td>$ N/m^2 $</td><td><a href=\"https://en.wikipedia.org/wiki/Pascal_(unit)\" target=\"_blank\">Pascal</a></td></tr><tr><td>S</td><td>$ A/V $</td><td><a href=\"https://en.wikipedia.org/wiki/Siemens_(unit)\" target=\"_blank\">Siemens</a></td></tr></table>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 27,
+       "prompt_number": 12,
        "text": [
         "<IPython.core.display.HTML object>"
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -396,7 +386,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 12
     }
    ],
    "metadata": {}
